--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,4 @@
-MYSQL_ROOT_PASSWORD=secret
-MYSQL_DATABASE=packagesweb
+RDS_HOST=bynetinstallerdb-1.crpb8hkd9mij.us-east-1.rds.amazonaws.com
+RDS_USR=admin
+RDS_PASSWD=Lilah!1234
+RDS_DB=packages
