--- a/src/.env
+++ b/src/.env
@@ -2,3 +2,5 @@ RDS_HOST=bynetinstallerdb-1.crpb8hkd9mij.us-east-1.rds.amazonaws.com
 RDS_USR=admin
 RDS_PASSWD=Lilah!1234
 RDS_DB=packages
+API_KEY=123
+SNOW_URL="https://bynetprod.servicenow.com/api/x_bdml_nimbus/v1/nimbus_api/"
