--- a/src/.env
+++ b/src/.env
@@ -3,4 +3,4 @@ RDS_USR=admin
 RDS_PASSWD=Lilah!1234
 RDS_DB=packages
 API_KEY=123
-SNOW_URL='https://bynetprod.servicenow.com/api/x_bdml_nimbus/v1/nimbus_api/'
+SNOW_URL='https://bynetprod.service-now.com/api/x_bdml_nimbus/v1/nimbus_api/'
