--- a/src/.env
+++ b/src/.env
@@ -1,8 +1,6 @@
-RDS_HOST=bynetinstallerdb-1.crpb8hkd9mij.us-east-1.rds.amazonaws.com
-RDS_USR=admin
-RDS_PASSWD=Lilah!1234
-RDS_DB=packages
-API_KEY=123
-BYNET_INSTALLER_DEBUG=False
-SNOW_URL='https://bynetprod.service-now.com/api/x_bdml_nimbus/v1/nimbus_api/'
-
+INSTANCE_ID=9088022265963333921
+INSTANCE_NAME=bynet-1-vm
+ZONE=projects/679054047603/zones/me-west1-b
+MACHINE_TYPE=projects/679054047603/machineTypes/e2-small
+PROJECT_ID=bynet-public
+GCP_ACCOUNT_ID=679054047603-compute@developer.gserviceaccount.com
